refactor: Remove obsolete code and clean up unused components
Deleted obsolete classes:
- RandomXSnapshotLoader and SnapshotStrategy (replaced by simplified seed management)
- AbstractXdagLifecycle and BlockFinalizationService (unused lifecycle abstractions)
- DruidUtils, FileUtils, NettyUtils (unused utility classes)
- DeserializationException, SerializationException, SimpleCodecException, UnreachableException (unused exception classes)
- ResolvedEntity, PretopMessage (unused data structures)
- SnapshotStrategyTest and druid.properties (obsolete test artifacts)

Code cleanup:
- Improved code formatting and organization
- Removed unused methods and redundant code
- Simplified imports and optimized class structures
- Applied modern Java syntax (text blocks, enhanced switch, pattern matching)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>